# tsercom

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .style.yapf  =0.38.0  MANIFEST.in  README.md  add_mypy_ignores.py  add_ruff_exclude.py  async_poller_consolidation_test_run.txt  base_handler_test_run_output.txt  base_handler_test_run_output_asyncmock_fix.txt  base_handler_test_run_output_current_state.txt  base_handler_test_run_output_final_attempt.txt  base_handler_test_run_output_multifix.txt  base_handler_test_run_output_reattempt_fix.txt  base_handler_test_run_output_timestamp_attr_fix.txt  base_handler_test_run_output_todatetime_fix.txt  build_docs.sh  caller_identifier_test_run_output.txt  clean_comments.py  clean_syntax.py  cleanup_black_comments.py  client_handler_test_run_output_final.txt  conftest.py  correct_test_logic.py  correct_tests_v2.py  create_workflow.sh  current_mypy_errors.txt  current_pylint_run.txt  e2e_post_abcmeta_fix.txt  e2e_post_rff_client_fix.txt  e2e_test_run_output.txt  e501_errors.json  e501_errors.txt  execute_file_rewrite.py  factory_test_run_output.txt  final_e2e_stability_check.txt  find_overloads.py  fix_tests.py  (+196 more)
.github/workflows/: isort-check.yml  layering_check.yml  mypy-check.yml  publish_docs.yml  publish_to_pypi.yml  publish_to_testpypi.yml  python-tests.yml  ruff_check.yml  style_check.yml  yapf_check.yml
docs/: conf.py  index.rst
main/: .buildinfo  index.html  py-modindex.html
main/.doctrees/: environment.pickle  index.doctree
recipe/: meta.yaml
scripts/: generate_protos.py  generate_protos_for_conda.py
tests/unit/data/: remote_data_organizer_test.py
tsercom/: __init__.py  _version.py  discovery_e2etest.py  full_app_e2etest.py  rpc_e2etest.py  runtime_e2etest.py  tensor_e2etest.py
tsercom/api/: __init__.py  annotated_instance.py  endpoint_data_processor.py  initialization_pair.py  runtime_command.py  runtime_data_handler.py  runtime_data_handler_base.py  runtime_factory_factory.py  runtime_future_populator.py  runtime_handle.py  runtime_manager.py  runtime_manager_helpers.py  runtime_manager_unittest.py  serializable_annotated_instance.py
tsercom/caller_id/: __init__.py  caller_id_extraction.py  caller_id_extraction_unittest.py  caller_id_map.py  caller_id_map_unittest.py  caller_id_pb2.py  caller_id_pb2.pyi  caller_identifier.py  caller_identifier_unittest.py  caller_identifier_waiter.py  caller_identifier_waiter_unittest.py  client_id_fetcher.py  client_id_fetcher_unittest.py  extraction.py  get_id_server.py
tsercom/common/: __init__.py  custom_data_type.py  messages.py
tsercom/config/: grpc_channel_config.py
tsercom/data/: __init__.py  annotated_instance.py  data_host.py  data_host_base.py  data_host_base_unittest.py  data_timeout_tracker.py  data_timeout_tracker_unittest.py  event_instance.py  exposed_data.py  exposed_data_with_responder.py  exposed_data_with_responder_unittest.py  remote_data_aggregator.py  remote_data_aggregator_impl.py  remote_data_aggregator_impl_unittest.py  remote_data_organizer.py  remote_data_organizer_unittest.py  remote_data_reader.py  remote_data_responder.py  serializable_annotated_instance.py  smoothed_tensor_demuxer.py  smoothed_tensor_demuxer_unittest.py  smoothed_tensor_provider.py  smoothed_tensor_provider_unittest.py  tensor_demuxer.py  tensor_demuxer_unittest.py  tensor_multiplexer.py  tensor_multiplexer_unittest.py  tensor_multiplexing_component_test.py
tsercom/discovery/: __init__.py  discovery_host.py  discovery_host_unittest.py  service_connector.py  service_connector_unittest.py  service_info.py  service_source.py
tsercom/rpc/: addressing.py  async_grpc_exception_interceptor.py  channel_info.py  client_diconnection_retrier.py  common_pb2.py  common_pb2.pyi  discoverable_grpc_endpoint_connector.py  grpc_caller.py  grpc_channel_factory.py  grpc_service_publisher.py  rpc_e2etest.py  serializable_tensor.py  test_connection_server.py
tsercom/runtime/: __init__.py  caller_processor_registry.py  caller_processor_registry_unittest.py  channel_factory_selector.py  channel_factory_selector_unittest.py  data_reader_sink.py  data_reader_source.py  endpoint_data_processor.py  endpoint_data_processor_unittest.py  event_poller_adapter.py  event_poller_adapter_unittest.py  id_tracker.py  id_tracker_unittest.py  running_runtime.py  runtime.py  runtime_command.py  runtime_config.py  runtime_config_unittest.py  runtime_data_handler.py  runtime_data_handler_base.py  runtime_data_handler_base_unittest.py  runtime_factory.py  runtime_initializer.py  runtime_main.py  runtime_main_unittest.py  runtime_manager.py  runtime_routing_e2e_unittest.py  shim_running_runtime.py  split_process_error_watcher_sink.py
tsercom/tensor/: __init__.py  serializable_tensor.py  serializable_tensor_unittest.py  stream_receiver.py  stream_receiver_unittest.py
tsercom/test/: __init__.py  conftest.py  data_fixtures.py  discovery_fixtures.py  e2e_test_servicer.py  loop_fixtures.py  runtime_fixtures.py
tsercom/threading/: __init__.py  async_poller.py  async_poller_unittest.py  atomic.py  atomic_unittest.py  error_watcher.py  is_running_tracker.py  is_running_tracker_unittest.py  task_runner.py  thread_safe_queue.py  thread_safe_queue_unittest.py  thread_watcher.py  thread_watcher_unittest.py  throwing_thread.py  throwing_thread_pool_executor.py  throwing_thread_pool_executor_unittest.py  throwing_thread_unittest.py
tsercom/timesync/: __init__.py
tsercom/util/: __init__.py  connection_factory.py  dynamic_import.py  get_proto_module.py  ip.py  ip_unittest.py  is_running_tracker.py  is_running_tracker_unittest.py  stopable.py  stopable_unittest.py
v1.0.0/: .buildinfo
v1.0.0/.doctrees/: environment.pickle  index.doctree
v1.0.1/: .buildinfo  objects.inv
v1.0.1/.doctrees/: environment.pickle  index.doctree
v1.1.1/: .buildinfo  searchindex.js
v1.1.1/.doctrees/: environment.pickle  index.doctree
v1.1.2/: .buildinfo
v1.1.2/.doctrees/: environment.pickle  index.doctree
v1.1.3/: .buildinfo  genindex.html  search.html
v1.1.3/.doctrees/: environment.pickle  index.doctree
(+258 files in other folders)
